# MinoFlux

./: .gitignore  README.md  pyproject.toml  start-game.bat  start-lab.bat  start-versus.bat
.github/workflows/: ci.yml  python-ci.yml
presets/: recovered-attack-20260723.json
src/minoflux/: cli.py  game.py  handling.py  lab.py  replay.py  run_store.py  settings.py  simulation.py  versus.py
src/minoflux_ai/: __init__.py  benchmark.py  cem.py  features.py  heuristic.py  promotion.py  reachability.py  replay.py  search.py
src/minoflux_engine/: __init__.py  b2b.py  game.py  pieces.py  spin.py  state.py  versus.py
tests/: test_ai.py  test_attack_promotion.py  test_b2b_versus.py  test_cem_acceleration.py  test_engine.py  test_input.py  test_lab_model_selection.py  test_lock_and_srs.py  test_replay_cem.py  test_replay_hold.py  test_search.py  test_search_acceleration.py  test_srs_reachability.py
